--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "express": "^5.1.0",
+    "express-validator": "^7.3.0",
     "postgres": "^3.4.7"
   }
 }
