--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "drizzle-orm": "^0.44.7",
     "express": "^5.1.0",
     "express-validator": "^7.3.0",
-    "postgres": "^3.4.7"
+    "postgres": "^3.4.7",
+    "uuid": "^13.0.0"
   }
 }
