--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "drizzle-kit": "^0.31.6",
     "nodemon": "^3.1.10",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.78.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "express": "^5.1.0",
